[ResourceMonitor] Update unloaded frame message. https://bugs.webkit.org/show_bug.cgi?id=284857 rdar://141648202
Reviewed by Ben Nham.

Replace current placeholder message with more descriptive and responsive design
for various sizes. Also add custom message for Cocoa platform.

* Source/WebCore/en.lproj/Localizable.strings:
* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::networkUsageDidExceedThreshold):
(WebCore::generateResourceMonitorErrorHTML):

Canonical link: https://commits.webkit.org/288044@main

--- a/Source/WebCore/en.lproj/Localizable.strings
+++ b/Source/WebCore/en.lproj/Localizable.strings
@@ -2161,3 +2161,5 @@
 /* Option in segmented control for choosing list type in text editing */
 "•" = "•";
 
+/* Description HTML for frame unloaded by ResourceMonitor */
+"This frame is hidden for using too many system resources." = "This frame is hidden for using too many system resources.";
