[visionOS] When going into element fullscreen and an immersive video is present, button should be shown https://bugs.webkit.org/show_bug.cgi?id=288002 rdar://145164754
Reviewed by Jer Noble.

Present the fullscreen button for both immersive and spatial video; and adjust its label accordingly.

Manually tested.

* Source/WebCore/en.lproj/Localizable.strings:
* Source/WebCore/platform/LocalizedStrings.cpp:
(WebCore::fullscreenControllerViewImmersive):
* Source/WebCore/platform/LocalizedStrings.h:
* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController _setTopButtonLabel:]):
(-[WKFullScreenViewController configureEnvironmentPickerOrFullscreenVideoButtonView]):
(-[WKFullScreenViewController loadView]):

Canonical link: https://commits.webkit.org/290663@main

--- a/Source/WebCore/en.lproj/Localizable.strings
+++ b/Source/WebCore/en.lproj/Localizable.strings
@@ -1711,6 +1711,9 @@
 /* Title for View Spatial action button while in fullscreen */
 "View Spatial" = "View Spatial";
 
+/* Title for View Immersive action button while in fullscreen */
+"View Immersive" = "View Immersive";
+
 /* Title for View Spatial Photo action button */
 "View Spatial Photo" = "View Spatial Photo";
 
