Update safe browsing warning for phishing sites https://bugs.webkit.org/show_bug.cgi?id=288586 rdar://145601460
Reviewed by Charlie Wolfe.

Update the phishing warning text according to
requirements laid out in radar.

This patch also cleans up HAVE_SAFE_BROWSING_RESULT_DETAILS,
which is no longer needed.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/en.lproj/Localizable.strings:
* Source/WebKit/Platform/spi/Cocoa/SafeBrowsingSPI.h:
* Source/WebKit/UIProcess/Cocoa/BrowsingWarningCocoa.mm:
(WebKit::malwareDetailsBase):
(WebKit::learnMoreURL):
(WebKit::reportAnErrorBase):
(WebKit::localizedProviderDisplayName):
(WebKit::localizedProviderName):
(WebKit::browsingDetailsText):
(WebKit::localizedProvider): Deleted.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm:
(-[TestServiceLookupResult localizedProviderDisplayName]):

Canonical link: https://commits.webkit.org/291164@main

--- a/Source/WebCore/en.lproj/Localizable.strings
+++ b/Source/WebCore/en.lproj/Localizable.strings
@@ -731,7 +731,7 @@
 "Host \"%s\" is invalid." = "Host \"%s\" is invalid.";
 
 /* Phishing warning description */
-"If you believe this website is safe, you can %report-an-error%. Or, if you understand the risks involved, you can %bypass-link%." = "If you believe this website is safe, you can %report-an-error%. Or, if you understand the risks involved, you can %bypass-link%.";
+"This website was reported as deceptive by %provider-display-name%. If you believe this website is safe, you can %report-an-error% to %provider%. Or, if you understand the risks involved, you can %bypass-link%." = "This website was reported as deceptive by %provider-display-name%. If you believe this website is safe, you can %report-an-error% to %provider%. Or, if you understand the risks involved, you can %bypass-link%.";
 
 /* Action from safe browsing warning */
 "If you understand the risks involved, you can %visit-this-unsafe-site-link%." = "If you understand the risks involved, you can %visit-this-unsafe-site-link%.";
