[UnifiedPDF] [iOS] Implement page number indicator https://bugs.webkit.org/show_bug.cgi?id=288487 rdar://118154868
Reviewed by Wenson Hsieh and Tim Horton.

This patch implements the page number indicator for main frame PDF
plugins on iOS. More details in-line.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

The web preference may be helpful to set (or unset) when authoring tests.
Currently, we enable it by default on iOS and gate creation of the
indicator behind it.

* Source/WTF/wtf/PlatformEnableCocoa.h:

Introduce a new compile-time guard for the page number indicator,
limiting behavior changes to the iOS family.

* Source/WebCore/en.lproj/Localizable.strings:

Localize the label text for the indicator.

* Source/WebCore/page/ChromeClient.h:
(WebCore::ChromeClient::frameViewLayoutOrVisualViewportChanged):
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::layoutOrVisualViewportChanged):

Set up plumbing to forward (updated) unobscured content rect to any
relevant main frame plugin, downstream of visible content rect updates.

* Source/WebKit/PlatformMac.cmake:

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _createPDFPageNumberIndicator:withFrame:pageCount:]):
(-[WKWebView _removePDFPageNumberIndicator:]):
(-[WKWebView _updatePDFPageNumberIndicator:withFrame:]):
(-[WKWebView _updatePDFPageNumberIndicator:currentPage:]):
(-[WKWebView _removeAnyPDFPageNumberIndicator]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h:

Maintain a page number indicator (associated to a certain plugin) and
modify said indicator as necessary.

* Source/WebKit/UIProcess/PDF/WKPDFPageNumberIndicator.h: Added.
* Source/WebKit/UIProcess/PDF/WKPDFPageNumberIndicator.mm: Added.
(-[WKPDFPageNumberIndicator initWithFrame:view:pageCount:]):
(-[WKPDFPageNumberIndicator dealloc]):
(-[WKPDFPageNumberIndicator updatePosition:]):
(-[WKPDFPageNumberIndicator setCurrentPageNumber:]):
(-[WKPDFPageNumberIndicator setPageCount:]):
(-[WKPDFPageNumb

--- a/Source/WebCore/en.lproj/Localizable.strings
+++ b/Source/WebCore/en.lproj/Localizable.strings
@@ -88,6 +88,9 @@
 /* Label to describe the number of files selected in a file upload control that allows multiple files */
 "%d files" = "%d files";
 
+/* Label for PDF page number indicator. */
+"%1$d of %2$d" = "%1$d of %2$d";
+
 /* Codec Level (Codec Strings) */
 "%d.%d" = "%d.%d";
 
